--- a/v0.1/example_submission/Makefile.inc
+++ b/v0.1/example_submission/Makefile.inc
@@ -5,6 +5,7 @@ DOWNLOADS += \
 example_submission/libtensorflow-microlite.a \
 example_submission/tensorflow
 
+
 LDFLAGS += -Lexample_submission -ltensorflow-microlite
 
 SRCS += \
@@ -12,5 +13,5 @@ example_submission/model.cc \
 example_submission/timers.cc \
 example_submission/logging.cc
 
-DOWNLOAD_DEPS += example_submission/download_and_build_tfmicro.sh
+DOWNLOAD_DEPS += example_submission/download_and_build_tfmicro.sh ${TFMICRO_MAKE_FLAGS} 
 
