Fix bug where riscv-linux makefile.inc file wasn't included

--- a/v0.1/bsp/riscv-linux/makefile.inc
+++ b/v0.1/bsp/riscv-linux/makefile.inc
@@ -1,4 +1,4 @@
-ifeq ($(TARGET_ARCH), cv32e40p)
+ifeq ($(TARGET_ARCH), riscv-linux)
     BSP_DIR = ./bsp/cv32e40p/
 
     TARGET_TOOLCHAIN_PREFIX = riscv32-unknown-elf-
