Port logging and cycle count systems to CV32E40P
Add CV32E40P-compatible implementations of logging functions and cycle
count functions guarded by preprocessor ifdef blocks.

Edit the formatting of the cycle count print in the main function
in guarded print statements to only print out the cycle count when
compiled for CV32E40P.

--- a/v0.1/bsp/cv32e40p/makefile.inc
+++ b/v0.1/bsp/cv32e40p/makefile.inc
@@ -10,7 +10,8 @@ ifeq ($(TARGET_ARCH), cv32e40p)
         -mabi=ilp32 \
         -march=rv32imc \
         -Wall \
-        -pedantic
+        -pedantic \
+        -DCV32E40P
 
     CCFLAGS += CXXFLAGS
 
